--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 byteorder = "1.5.0"
 rand = "0.9.1"
 sha3 = "0.10.8"
+diamond-io = { git = "https://github.com/MachinaIO/diamond-io.git" }
